# baseliner

./: .dockerignore  .gitignore  .pre-commit-config.yaml  baseliner.code-workspace  baseliner.db  change_summary.md  docker-compose.nginx-certbot.yml  docker-compose.yml  pyproject.toml  pytest.ini  readme.md
agent/: MVP_Demo_Walkthrough.md  README.md  pyproject.toml  requirements.txt
agent/.venv-build/: pyvenv.cfg
agent/.venv-build/Scripts/: activate  activate.bat
agent/packaging/: Build-Agent.ps1  Install-BaselinerAgent.ps1  README.md  Uninstall-BaselinerAgent.ps1  baseliner-agent.spec  entrypoint.py
agent/scripts/: install-baseliner-agent-task.ps1  policy-lifecycle-smoketest.ps1  show-baseliner-agent-config.ps1  start-baseliner-agent-task.ps1  tail-baseliner-agent-log.ps1  test-baseliner.ps1  uninstall-baseliner-agent-task.ps1
agent/src/baseliner_agent/: agent.py  agent_health.py  cli.py  config.py  engine.py  http_client.py  local_logging.py  powershell.py  reporting.py  state.py  support_bundle.py  winget.py
agent/src/baseliner_agent/resources/: __init__.py  base.py  registry.py  script_powershell.py  winget_package.py
agent/src/baseliner_agent/security/: dpapi.py
agent/src/baseliner_agent/tests/: openapi.pretty.json  test-baseliner-packages.ps1
agent/tests/: test_agent_health.py  test_support_bundle.py
docs/: README-nginx-certbot.md  README.md
policies/: baseliner-windows-core.json
server/: .env  .env.example  (+5 more)
tools/admin-cli/: README.md  pyproject.toml
tools/admin-cli/src/baseliner_admin/: cli.py  client.py  render.py  tui.py  util.py
(+151 files in other folders)
