[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "baseliner-agent"
version = "0.1.0-dev"
description = "Baseliner Windows agent (MVP)"
requires-python = ">=3.12"
dependencies = ["requests>=2.31.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
